# MiMoCA

./: AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: windows-release.yml
assets/: recipes.json
installer/: mimoca.iss
python/: bootstrap_sidecar_env.py  requirements.txt  service.py
scripts/: first_launch_setup.ps1  launch_mimoca.bat  manual_qa_scenario.md  manual_qa_scenario.py  release_checklist.md  release_gate.py  smoke_release.py
src/: main.cpp
