cmake_minimum_required(VERSION 3.20)
project(MiMoCA LANGUAGES CXX)

include(GNUInstallDirs)

add_executable(mimoca src/main.cpp)
target_compile_features(mimoca PRIVATE cxx_std_20)

find_package(OpenCV QUIET COMPONENTS core videoio imgproc imgcodecs)
if(OpenCV_FOUND)
  target_compile_definitions(mimoca PRIVATE MIMOCA_HAS_OPENCV=1)
  target_link_libraries(mimoca PRIVATE ${OpenCV_LIBS})
endif()

if(WIN32)
  target_compile_definitions(mimoca PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX)
  option(MIMOCA_ENABLE_QT_UI "Enable Qt-based primary UI layer" ON)
  if(MIMOCA_ENABLE_QT_UI)
    find_package(Qt6 QUIET COMPONENTS Core Gui Widgets)
    if(Qt6_FOUND)
      target_compile_definitions(mimoca PRIVATE MIMOCA_HAS_QT=1)
      target_link_libraries(mimoca PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets)
      set_target_properties(mimoca PROPERTIES WIN32_EXECUTABLE TRUE)
    else()
      message(WARNING "Qt6 not found; building without Qt UI layer.")
    endif()
  endif()
endif()

if(MSVC)
  target_compile_definitions(mimoca PRIVATE _CRT_SECURE_NO_WARNINGS)
  target_compile_options(mimoca PRIVATE /W4 /permissive-)
  target_link_libraries(mimoca PRIVATE sapi ole32)
else()
  target_compile_options(mimoca PRIVATE -Wall -Wextra -Wpedantic)
endif()

set(MIMOCA_RELEASE_LAYOUT_ROOT "MiMoCA")
set(MIMOCA_MANAGED_PYTHON_RUNTIME "" CACHE PATH "Path to a managed Python runtime to package under runtime/python")

install(TARGETS mimoca RUNTIME DESTINATION ${MIMOCA_RELEASE_LAYOUT_ROOT}/bin)
install(DIRECTORY assets/ DESTINATION ${MIMOCA_RELEASE_LAYOUT_ROOT}/assets)
install(DIRECTORY python/ DESTINATION ${MIMOCA_RELEASE_LAYOUT_ROOT}/python)
install(DIRECTORY scripts/ DESTINATION ${MIMOCA_RELEASE_LAYOUT_ROOT}/scripts)

if(MIMOCA_MANAGED_PYTHON_RUNTIME)
  install(DIRECTORY "${MIMOCA_MANAGED_PYTHON_RUNTIME}/" DESTINATION ${MIMOCA_RELEASE_LAYOUT_ROOT}/runtime/python)
endif()
